Old-Stuff/_Learning/kind/testing-cluster-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-b
  namespace: net-test
spec:
  selector:
    run: pod-b
  ports:
    - port: 80
      targetPort: 80
